--- a/package.json
+++ b/package.json
@@ -8,12 +8,30 @@
   "license": "ISC",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "release": "release-it"
+    "release": "release-it",
+    "merge-main-and-release": "npm run release"
   },
   "devDependencies": {
-    "release-it": "^15.10.0"
+    "release-it": "^15.10.0",
+    "auto-changelog": "*"
   },
   "release-it": {
+    "hooks": {
+      "before:merge-main-and-release": [
+        "git checkout main",
+        "git pull",
+        "git checkout release/{$version} 2>/dev/null || git checkout -b release/{$version}",
+        "git merge main"
+      ],
+      "before:release": [
+        "git checkout main",
+        "git pull",
+        "git checkout release/{$version} 2>/dev/null || git checkout -b release/{$version}"
+      ],
+      "after:release": [
+        "gh pr create --base master --title 'chore: release {$version}' --body ''"
+      ]
+    },
     "npm": {
       "publish": true
     },
