--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "npmautomation-testing-release-it-package",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "",
   "main": "index.js",
   "keywords": [],
@@ -9,11 +9,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "release-it",
-    "merge-main-and-release": "npm run release"
+    "merge-main-and-release": "release-it"
   },
   "devDependencies": {
     "release-it": "^15.10.0",
     "auto-changelog": "*"
+  },
+  "auto-changelog": {
+    "replaceText": {
+      "<!-- next-header -->": "<!-- next-header -->\n\n## Unreleased\n\n",
+      "## Unreleased": "## "
+    }
   },
   "release-it": {
     "hooks": {
@@ -33,7 +39,8 @@
       ]
     },
     "npm": {
-      "publish": true
+      "publish": true,
+      "changelog": "npx auto-changelog --stdout --commit-limit false --unreleased --template https://raw.githubusercontent.com/release-it/release-it/main/templates/changelog-compact.hbs"
     },
     "github": {
       "release": true
