--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
       "before:merge-main-and-release": [
         "git checkout main",
         "git pull",
-        "git checkout release/{$version} 2>/dev/null || git checkout -b release/{$version}",
+        "git checkout release/${version} 2>/dev/null || git checkout -b release/${version}",
         "git merge main"
       ],
       "before:release": [
         "git checkout main",
         "git pull",
-        "git checkout release/{$version} 2>/dev/null || git checkout -b release/{$version}"
+        "git checkout release/${version} 2>/dev/null || git checkout -b release/${version}"
       ],
       "after:release": [
-        "gh pr create --base master --title 'chore: release {$version}' --body ''"
+        "gh pr create --base master --title 'chore: release ${version}' --body ''"
       ]
     },
     "npm": {
