--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "npmautomation-testing-release-it-package",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "",
   "main": "index.js",
   "keywords": [],
@@ -9,31 +9,38 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "release-it",
-    "merge-main-and-release": "npm run release"
+    "merge-main-and-release": "release-it"
   },
   "devDependencies": {
     "release-it": "^15.10.0",
     "auto-changelog": "*"
+  },
+  "auto-changelog": {
+    "replaceText": {
+      "<!-- next-header -->": "<!-- next-header -->\n\n## Unreleased\n\n",
+      "## Unreleased": "## "
+    }
   },
   "release-it": {
     "hooks": {
       "before:merge-main-and-release": [
         "git checkout main",
         "git pull",
-        "git checkout release/{$version} 2>/dev/null || git checkout -b release/{$version}",
+        "git checkout release/${version} 2>/dev/null || git checkout -b release/${version}",
         "git merge main"
       ],
       "before:release": [
         "git checkout main",
         "git pull",
-        "git checkout release/{$version} 2>/dev/null || git checkout -b release/{$version}"
+        "git checkout release/${version} 2>/dev/null || git checkout -b release/${version}"
       ],
       "after:release": [
-        "gh pr create --base master --title 'chore: release {$version}' --body ''"
+        "gh pr create --base master --title 'chore: release ${version}' --body ''"
       ]
     },
     "npm": {
-      "publish": true
+      "publish": true,
+      "changelog": "npx auto-changelog --stdout --commit-limit false --unreleased --template https://raw.githubusercontent.com/release-it/release-it/main/templates/changelog-compact.hbs"
     },
     "github": {
       "release": true
