--- a/package.json
+++ b/package.json
@@ -40,6 +40,11 @@
       ],
       "after:bump": "npx auto-changelog -p"
     },
+    "git": {
+      "requireBranch": "main"
+
+
+    },
     "npm": {
       "publish": true,
       "changelog": "npx auto-changelog --stdout --commit-limit false --unreleased --template https://raw.githubusercontent.com/release-it/release-it/main/templates/changelog-compact.hbs"
@@ -48,8 +53,8 @@
       "release": true,
       "autoGenerate": true,
       "web": false,
-      "tokenRef": "GITHUB_TOKEN"
-
+      "draft": true,
+      "releaseNotes": "lol"
     }
   }
 }
