--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
   },
   "release-it": {
     "hooks": {
+      "before:init": [
+        "gh auth status || gh auth login",
+        "npm whoami || npm login",
+        "export GITHUB_TOKEN=$(gh auth token)"
+      ],
       "before:merge-main-and-release": [
         "git checkout main",
         "git pull",
