--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
       "before:init": [
         "gh auth status || gh auth login",
         "npm whoami || npm login",
-        "test -z $GITHUB_TOKEN || test $GITHUB_TOKEN = $(gh auth status --show-token) || exit 0"
+        "if [ -z \"$GITHUB_TOKEN\" ]; then echo \"GITHUB_TOKEN is not set\"; exit 1; fi"
       ],
       "before:merge-main-and-release": [
         "git checkout main",
